--- a/style.css
+++ b/style.css
@@ -7,16 +7,6 @@ ul{
 h3{
     margin: 0;
 }
-th{
-    margin-right: 56px;
-}
-.tr {
-    border-color: aqua;
-}
-
-.tr {
-    border-color: aqua;
-}
 
 button{
     width: 100%;
@@ -45,6 +35,7 @@ table {
 }
 
 .genelal-title{
+font-weight: 600;
 font-size: 26px;
 margin-left: 8px;
 margin-right: 4px;
@@ -76,17 +67,31 @@ align-items: baseline
     margin-right: 42px;
 }
 
+.menu-item:hover{
+    background-color: #5932EA;
+}
+
 .menu-item-name-and-icon{
 display:flex;
 }
+
 
 .menu-item-img{
     margin-right: 14px;
 }
 
 .menu-item-paragrapher{
-    margin-right: 123px;
+color: #9197B3;
+font-weight: 500;
+font-size: 14px;
 }
+
+
+
+.menu-item-name-and-icon:hover {
+    color: #FFFFFF;
+}
+
 
 .users-info{
     display: flex;
@@ -120,14 +125,20 @@ font-size: 14px;
     border: none;
     border-radius: 4px;
     padding: 4px 18px;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 .active{
-    background-color: green;
+    background-color: #16C038;
+    color: #008767;
+    border: 1px solid #16C098;
 }
 
 .inactive{
-    background-color: red;
+    color: #DF0404;
+    background-color: #FFC5C5;
+    border: 1px solid #DF0404;
 }
 
 
@@ -137,9 +148,15 @@ justify-content: space-between;
 margin-bottom: 40px;
 }
 
+.all-custs-title{
+    font-weight: 600;
+    font-size: 22px;
+}
+
 .active-members{
     color: #16C098;
     font-size: 14px;
+    margin: 0;
 }
 
 .input-area{
@@ -149,32 +166,19 @@ margin-bottom: 40px;
     border-radius: 10px;
     background-color: #F9FBFF;
     padding: 10px 134px 10px 40px;
-    /* position: relative; */
 }
 
 .header-of-the-table-input-area{
-        position: relative;
-    
+        position: relative; 
 }
 
 .header-of-the-table-input-area .icon{
     position: absolute;
-        /* top: 50%; */
         margin-left: 8px;
         margin-top: 17px;
-
         z-index: 1;
 }
 
-
-        /* .input-area::before {
-            content: url('./icon/search.svg');
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            /* Центрирование изображения по вертикали */
-        } */
 
 .table-container{
     width: 968px;
@@ -190,6 +194,8 @@ margin-bottom: 40px;
 .showing-data {
     color: #B5B7C0;
     margin: 0;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 
@@ -224,10 +230,19 @@ thead th:nth-child(4) {
 th,
 td {
     padding: 20px;
+    font-weight: 500;
+    font-size: 14px;
+}
+th{
+    color: #B5B7C0;
 }
 
-.msg-hello-container{
-    margin-bottom: 40px;
+
+
+.msg-hello{
+    font-weight: 500;
+    font-size: 24px;
+        margin-bottom: 32px;
 }
 
 
