--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ table {
 }
 
 .genelal-title{
-font-weight: 600;
-font-size: 26px;
-margin-left: 8px;
-margin-right: 4px;
+    font-weight: 600;
+    font-size: 26px;
+    margin-left: 8px;
+    margin-right: 4px;
 }
 
 .genelal-title-version{
@@ -53,8 +53,8 @@ margin-right: 4px;
 }
 
 .title-locat-helper{
-display: flex;
-align-items: baseline
+    display: flex;
+    align-items: baseline
 }
 
 
@@ -72,25 +72,32 @@ align-items: baseline
 }
 
 .menu-item-name-and-icon{
-display:flex;
+    display:flex;
+    align-items: center
 }
 
 
 .menu-item-img{
     margin-right: 14px;
+    /* stroke: #9197B3; */
 }
 
 .menu-item-paragrapher{
-color: #9197B3;
-font-weight: 500;
-font-size: 14px;
+    color: #9197B3;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.menu-item:hover .menu-item-img{
+        stroke: #FFFFFF;
+        /* fill: white; */
+}
+.menu-item:hover .menu-item-paragrapher {
+    color: white;
+    /* stroke: #FFFFFF; */
 }
 
 
-
-.menu-item-name-and-icon:hover {
-    color: #FFFFFF;
-}
 
 
 .users-info{
@@ -104,7 +111,7 @@ font-size: 14px;
 }
 
 .users-name{
-font-size: 14px;
+    font-size: 14px;    
 }
 
 .users-position{
@@ -143,9 +150,9 @@ font-size: 14px;
 
 
 .header-of-the-table{
-display: flex;
-justify-content: space-between;
-margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .all-custs-title{
@@ -169,14 +176,14 @@ margin-bottom: 40px;
 }
 
 .header-of-the-table-input-area{
-        position: relative; 
+    position: relative; 
 }
 
 .header-of-the-table-input-area .icon{
     position: absolute;
-        margin-left: 8px;
-        margin-top: 17px;
-        z-index: 1;
+    margin-left: 8px;
+    margin-top: 17px;
+    z-index: 1;
 }
 
 
@@ -200,8 +207,8 @@ margin-bottom: 40px;
 
 
 .table-row{
-border: 1px solid #EEEEEE;
-padding: 8px;
+    border: 1px solid #EEEEEE;
+    padding: 8px;
 }
 
 
@@ -211,20 +218,27 @@ padding: 8px;
     justify-content: space-between;
 }
 
-thead th:nth-child(1) {
-    width: 30%;
-}
-
-thead th:nth-child(2) {
+ th:nth-child(1) {
     width: 20%;
 }
 
-thead th:nth-child(3) {
+ th:nth-child(2) {
+    width: 10%;
+}
+
+ th:nth-child(3) {
     width: 15%;
 }
 
-thead th:nth-child(4) {
-    width: 35%;
+ th:nth-child(4) {
+    width: 25%;
+}
+
+ th:nth-child(5) {
+    width: 15%;
+}
+ th:nth-child(6) {
+    width: 10%;
 }
 
 th,
@@ -237,12 +251,10 @@ th{
     color: #B5B7C0;
 }
 
-
-
 .msg-hello{
     font-weight: 500;
     font-size: 24px;
-        margin-bottom: 32px;
+    margin-bottom: 32px;
 }
 
 
